fixed toggle button mobile spacing issue, tweaked fossilTwo position

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -128,6 +128,10 @@
                 justify-content: space-evenly;
             }
         }
+
+        .fossilTwoContainer {
+            top: 25%;
+        }
     }
 
     //Project Section
@@ -196,14 +200,20 @@
     }
 
     .timeIconContainer {
-        justify-content: space-between;
+        justify-content: space-evenly;
+        align-content: center;
+
+        .sunIcon {
+            margin-right: 10px;
+        }
     }
 
-    //Contact Section
-    .contact {
+    //About Section
 
-        .overallContactContainer .contactInfo {
-            text-align: center;
+    .aboutSection {
+        .fossilTwoContainer {
+                top: 20%;
+                right: 0%;
         }
     }
 
@@ -225,6 +235,14 @@
                     font-size: 1.2rem;
                 }
             }
+        }
+    }
+
+    //Contact Section
+    .contact {
+
+        .overallContactContainer .contactInfo {
+            text-align: center;
         }
     }
 }
